# thomson-generator

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
data/: average-steepness.csv  cv-transistor.csv  generation-amplitude-hard.csv  generation-amplitude-soft.csv  generation-modes.csv
notebooks/: average_steepness.ipynb  cv-transistor.ipynb  cv_transistor.ipynb  generation_amplitude.ipynb  generation_modes.ipynb  test.ipynb
src/local/: __init__.py  utils.py
